# SimpleGameEngine

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/engine/basicUiObjects/: clickable.h  draggable.h
include/engine/core/: core.h  event.h  inputEvents.h  layer.h  layerCloseOpenEvents.h
include/engine/rendering/: renderable.h  windowRenderer.h
include/engine/spriteDataStuff/: IUpdatable.h
include/engine/utils/: exceptions.h  math.h  temp  windowSettings.h  windowsRescale.h
include/testApp/: backgroundLayer.h  overlay.h  testLayer.h
scripts/: run_cppcheck.sh
src/: main.cpp
src/engine/core/: core.cpp  layer.cpp
src/engine/input/: windowInput.cpp
src/engine/rendering/: windowRenderer.cpp
testApp/: overlay.h  testLayer.h
